Make `AbstractFuture` use `VarHandle` when available.
For now, this is only for the JRE flavor, not for Android.

Our not entirely great benchmarks suggest that this may actually improve performance slightly over the current `Unsafe`-based implementation. This matches my sense that [alternatives to `Unsafe` have gotten faster](https://github.com/google/guava/issues/6806#issuecomment-2518256341).

There are plenty of other [places in Guava that we use `Unsafe`](https://github.com/google/guava/issues/6806), but this is a start.

Also: I'm going to consider this CL to "fix" https://github.com/google/guava/issues/6549, even though:
- We already started requiring newer versions of Java to build our _tests_ in cl/705512728. (This CL is the first to require a newer JDK to build _prod_ code, again only to _build_ it, not to _run_ it.)
- We already started requiring newer versions of Java to build our _GWT_ module in cl/711487270.
- This CL requires only Java 9, not Java 11.
- None of the changes so far should require people who _build our Maven project_ to do anything (aside from GWT users), since our build automatically downloads a new JDK to use for javac since cl/655647768.
RELNOTES=n/a
PiperOrigin-RevId: 711733182