@@ -14,6 +14,8 @@
 
 package com.google.common.util.concurrent;
 
+import static com.google.common.base.StandardSystemProperty.JAVA_SPECIFICATION_VERSION;
+
 import com.google.common.collect.ImmutableSet;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
@@ -24,7 +26,6 @@ import java.util.concurrent.atomic.AtomicReferenceFieldUpdater;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 import org.jspecify.annotations.NullUnmarked;
-import sun.misc.Unsafe;
 
 /**
  * Tests our AtomicHelper fallback strategies in AbstractFuture.
@@ -32,18 +33,12 @@ import sun.misc.Unsafe;
  * <p>On different platforms AbstractFuture uses different strategies for its core synchronization
  * primitives. The strategies are all implemented as subtypes of AtomicHelper and the strategy is
  * selected in the static initializer of AbstractFuture. This is convenient and performant but
- * introduces some testing difficulties. This test exercises the two fallback strategies in abstract
- * future.
+ * introduces some testing difficulties. This test exercises the fallback strategies.
  *
- * <ul>
- *   <li>SafeAtomicHelper: uses AtomicReferenceFieldsUpdaters to implement synchronization
- *   <li>SynchronizedHelper: uses {@code synchronized} blocks for synchronization
- * </ul>
- *
- * To force selection of our fallback strategies we load {@link AbstractFuture} (and all of {@code
- * com.google.common.util.concurrent}) in degenerate class loaders which make certain platform
- * classes unavailable. Then we construct a test suite so we can run the normal AbstractFutureTest
- * test methods in these degenerate classloaders.
+ * <p>To force selection of our fallback strategies, we load {@link AbstractFuture} (and all of
+ * {@code com.google.common.util.concurrent}) in degenerate class loaders which make certain
+ * platform classes unavailable. Then we construct a test suite so we can run the normal
+ * AbstractFutureTest test methods in these degenerate classloaders.
  */
 
 @NullUnmarked
@@ -53,21 +48,30 @@ public class AbstractFutureFallbackAtomicHelperTest extends TestCase {
   // execution significantly)
 
   /**
-   * This classloader disallows {@link sun.misc.Unsafe}, which will prevent us from selecting our
-   * preferred strategy {@code UnsafeAtomicHelper}.
+   * This classloader disallows {@link java.lang.invoke.VarHandle}, which will prevent us from
+   * selecting our preferred strategy {@code VarHandleAtomicHelper}.
    */
-  @SuppressWarnings({"SunApi", "removal"}) // b/345822163
-  private static final ClassLoader NO_UNSAFE =
-      getClassLoader(ImmutableSet.of(Unsafe.class.getName()));
+  private static final ClassLoader NO_VAR_HANDLE =
+      getClassLoader(ImmutableSet.of("java.lang.invoke.VarHandle"));
 
   /**
-   * This classloader disallows {@link sun.misc.Unsafe} and {@link AtomicReferenceFieldUpdater},
-   * which will prevent us from selecting our {@code SafeAtomicHelper} strategy.
+   * This classloader disallows {@link java.lang.invoke.VarHandle} and {@link sun.misc.Unsafe},
+   * which will prevent us from selecting our {@code UnsafeAtomicHelper} strategy.
    */
-  @SuppressWarnings({"SunApi", "removal"}) // b/345822163
+  private static final ClassLoader NO_UNSAFE =
+      getClassLoader(ImmutableSet.of("java.lang.invoke.VarHandle", "sun.misc.Unsafe"));
+
+  /**
+   * This classloader disallows {@link java.lang.invoke.VarHandle}, {@link sun.misc.Unsafe} and
+   * {@link AtomicReferenceFieldUpdater}, which will prevent us from selecting our {@code
+   * AtomicReferenceFieldUpdaterAtomicHelper} strategy.
+   */
   private static final ClassLoader NO_ATOMIC_REFERENCE_FIELD_UPDATER =
       getClassLoader(
-          ImmutableSet.of(Unsafe.class.getName(), AtomicReferenceFieldUpdater.class.getName()));
+          ImmutableSet.of(
+              "java.lang.invoke.VarHandle",
+              "sun.misc.Unsafe",
+              AtomicReferenceFieldUpdater.class.getName()));
 
   public static TestSuite suite() {
     // we create a test suite containing a test for every AbstractFutureTest test method and we
@@ -86,13 +90,25 @@ public class AbstractFutureFallbackAtomicHelperTest extends TestCase {
   @Override
   public void runTest() throws Exception {
     // First ensure that our classloaders are initializing the correct helper versions
-    checkHelperVersion(getClass().getClassLoader(), "UnsafeAtomicHelper");
+    if (isJava8()) {
+      checkHelperVersion(getClass().getClassLoader(), "UnsafeAtomicHelper");
+    } else {
+      checkHelperVersion(getClass().getClassLoader(), "VarHandleAtomicHelper");
+    }
+    checkHelperVersion(NO_VAR_HANDLE, "UnsafeAtomicHelper");
     checkHelperVersion(NO_UNSAFE, "AtomicReferenceFieldUpdaterAtomicHelper");
     checkHelperVersion(NO_ATOMIC_REFERENCE_FIELD_UPDATER, "SynchronizedHelper");
 
     // Run the corresponding AbstractFutureTest test method in a new classloader that disallows
     // certain core jdk classes.
     ClassLoader oldClassLoader = Thread.currentThread().getContextClassLoader();
+    Thread.currentThread().setContextClassLoader(NO_UNSAFE);
+    try {
+      runTestMethod(NO_VAR_HANDLE);
+    } finally {
+      Thread.currentThread().setContextClassLoader(oldClassLoader);
+    }
+
     Thread.currentThread().setContextClassLoader(NO_UNSAFE);
     try {
       runTestMethod(NO_UNSAFE);
@@ -143,5 +159,9 @@ public class AbstractFutureFallbackAtomicHelperTest extends TestCase {
         return super.loadClass(name);
       }
     };
+  }
+
+  private static boolean isJava8() {
+    return JAVA_SPECIFICATION_VERSION.value().equals("1.8");
   }
 }
